css/style.css
/* ... */
header.left .mCSB_scrollTools {
    top: 20px;
    right: -10px;
    bottom: 20px;
}

header.left button.close {
    display: none;
    outline: none;
    padding: 0;
    background-color: #FFF;
    border: 0;
    -webkit-appearance: none;
    opacity: 1;
    color: #FF5959;
    font-weight: 400;
    font-size: 16px;
    border-radius: 50%;
    width: 20px;
    height: 20px;
    line-height: 22px;
    margin-top: 16px;
    margin-right: 18px;
    position: relative;
    z-index: 1;
}

header a {
    color: #FFF;
}

header a:hover {
    color: #FFF;
    text-decoration: none;
}

header .site-title {
    display: block;
    font-size: 28px;
    font-weight: 700;
}

header .site-title.dot:after {
    content: "";
    background-color: #FF5959;
    border-radius: 50%;
    display: inline-block;
    margin-left: 5px;
    height: 8px;
    width: 8px;
}

header .site-slogan {
    font-size: 12px;
    text-transform: uppercase;
}

header .vertical-menu {
    font-size: 14px;
    font-family: "Poppins", sans-serif;
    list-style: none;
    padding: 0;
    margin: 0;
}

header .vertical-menu i {
    margin-right: 20px;
}

header .vertical-menu li {
    line-height: 2.5;
    position: relative;
}

header .vertical-menu li a {
    margin-left: 0;
    padding: 0;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

header .vertical-menu li a:hover {
    margin-left: 5px;
}

header .vertical-menu li a.active:before {
    content: "";
    background: #FF5959;
    display: block;
    height: 18px;
    left: -30px;
    top: 7px;
    position: absolute;
    width: 3px;
}

header .copyright {
    font-size: 12px;
    opacity: 0.7;
}

.mobile-header {
    background: var(--bg-blue-color);
    border-radius: 20px;
    display: none;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0);
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.mobile-header.push {
    -webkit-transform: translateX(295px);
    -moz-transform: translateX(295px);
    -ms-transform: translateX(295px);
    -o-transform: translateX(295px);
    transform: translateX(295px);
}

.mobile-header .logo img {
    max-height: 40px;
    max-width: 40px;
}

.mobile-header .site-title {
    vertical-align: middle;
    font-size: 24px;
    font-weight: 700;
}

.mobile-header .site-title.dot:after {
    content: "";
    background-color: #FF5959;
    border-radius: 50%;
    display: inline-block;
    margin-left: 5px;
    height: 6px;
    width: 6px;
}

.mobile-header button.menu-icon {
    cursor: pointer;
    background: transparent;
    border: 0;
    outline: none;
    vertical-align: middle;
    padding: 0;
}

.mobile-header button.menu-icon span {
    background: #FFF;
    border-radius: 10px;
    display: block;
    height: 4px;
    width: 25px;
}

.mobile-header button.menu-icon span:nth-child(2) {
    margin-top: 4px;
    margin-bottom: 4px;
}

.mobile-header a {
    color: #FFF;
}

.mobile-header a:hover {
    text-decoration: none;
}

.site-wrapper {
    width: 1170px;
    margin-left: auto;
    margin-right: auto;
}

main.content {
    margin-top: 50px;
    margin-bottom: 50px;
    width: 875px;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0);
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

main.content.push {
    -webkit-transform: translateX(295px);
    -moz-transform: translateX(295px);
    -ms-transform: translateX(295px);
    -o-transform: translateX(295px);
    transform: translateX(295px);
}

.hero {
    height: 620px;
    margin-top: 0;
}

.hero .cta {
    color: #FFF;
    max-width: 600px;
    z-index: 1;
}

.hero .cta h1 {
    color: #FFF;
    font-size: 60px;
    line-height: 0.7;
}

.hero .cta h1 .dot:after {
    content: "";
    background-color: #FF5959;
    border-radius: 50%;
    display: inline-block;
    margin-left: 5px;
    height: 13px;
    width: 13px;
}

.hero .cta p {
    font-size: 16px;
    line-height: 1.8;
}

section {
    border-radius: 20px;
    position: relative;
    overflow: hidden;
    margin-top: 50px;
}

section.white-bg {
    background: #FFF;
}

section.padding {
    padding: 80px 50px;
}

section.padding-50 {
    padding: 50px;
}

section.padding-60 {
    padding: 60px 50px;
}

.section-title {
    margin: 0;
}

.section-title:after {
    content: "";
    background: #FF5959;
    border-radius: 25px;
    display: block;
    height: 5px;
    margin-top: 14px;
    width: 30px;
}

/*=================================================================*/
/*                      SKILLS                              
/*=================================================================*/
.skill-item .skill-info span {
    font-size: 14px;
}

.skill-item h4 {
    font-size: 14px;
    text-transform: uppercase;
}

.fact-item h2 {
    font-size: 36px;
    margin: 12px 0 7px;
}

.fact-item span {
    font-size: 14px;
}

.service-item {
    border: solid 1px #EFEFEF;
    border-radius: 10px;
    padding: 30px 20px;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.service-item h4,
.service-item i {
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.service-item:hover {
    border-color: #FF5959;
    background: #FF5959;
    color: #FFF;
    -webkit-box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.15);
    box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.15);
}

.service-item:hover h4,
.service-item:hover i {
    color: #FFF;
}
/* ... */

